--- a/playoff.html
+++ b/playoff.html
@@ -9,6 +9,12 @@
     <td><b>Semifinal</b></td>
     <td><b>Points Champion</td>
     <td><b>2nd Points</b></td></tr>
+<tr><td>2020</td>
+    <td>Steven(1195)-Randy(860)</td>
+    <td>Steven(1045)-States(580)</td>
+    <td>Randy(680)-Sam(645)</td>
+    <td>Sam (15100)</td>
+    <td>Steven (12710)</td></tr>
 <tr><td>2019</td>
     <td>Matt(795)-Randy(500)</td>
     <td>Matt(875)-Rich(415)</td>
