--- a/thousand.html
+++ b/thousand.html
@@ -22,6 +22,12 @@
     <td>Sam</td>
     <td>635</td></tr>
 <tr><td>2020</td>
+    <td>Week 17</td>
+    <td>Sam Edwards</td>
+    <td>1565</td>
+    <td>-</td>
+    <td>-</td></tr>
+<tr><td>2020</td>
     <td>Week 7</td>
     <td>Sam Edwards</td>
     <td>1555</td>
@@ -195,6 +201,12 @@
     <td>1195</td>
     <td>States</td>
     <td>450</td></tr>
+<tr><td>2020</td>
+    <td>Week 17</td>
+    <td>Steven Cohen</td>
+    <td>1195</td>
+    <td>Randy</td>
+    <td>860</td></tr>
 <tr><td>1994</td>
     <td>Week 1</td>
     <td>Randy Edwards</td>
