--- a/week17.html
+++ b/week17.html
@@ -21,7 +21,7 @@
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Randy (8)</b></font></td></tr>
-<tr><td>Rodgers (D)</td>   <td></td><td align=right>***</td></tr>
+<tr><td>Rodgers (D)</td>   <td></td><td align=right>220</td></tr>
 <tr><td>Mattison</td>      <td></td><td align=right>220</td></tr>
 <tr><td>Moss (D)</td>      <td></td><td align=right>0</td></tr>
 <tr><td>Robinson</td>      <td></td><td align=right>0</td></tr>
@@ -29,7 +29,7 @@
 <tr><td>JSmith</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Zuerlein</td>      <td></td><td align=right>170</td></tr>
 <tr><td>Tagovailoa</td>    <td></td><td align=right>140</td></tr>
-<tr><td></td>              <td></td><td align=right>***</td></tr>
+<tr><td></td>              <td></td><td align=right>860</td></tr>
 </table>
 </td>
 <td></td><td></td>
@@ -71,10 +71,10 @@
 <tr><td>Gallman</td>       <td></td><td align=right>30</td></tr>
 <tr><td>Lockett</td>       <td></td><td align=right>170</td></tr>
 <tr><td>Beasley</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Kelce (D)</td>     <td></td><td align=right>***</td></tr>
+<tr><td>Kelce (D)</td>     <td></td><td align=right>150</td></tr>
 <tr><td>Butker</td>        <td></td><td align=right>15</td></tr>
 <tr><td>Ruggs</td>         <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>***</td></tr>
+<tr><td></td>              <td></td><td align=right>610</td></tr>
 </table>
 </td>
 <td>
@@ -83,12 +83,12 @@
 <tr><td>Wilson (D)</td>    <td></td><td align=right>175</td></tr>
 <tr><td>Fournette</td>     <td></td><td align=right>0</td></tr>
 <tr><td>Gaskin</td>        <td></td><td align=right>75</td></tr>
-<tr><td>Hill (D)</td>      <td></td><td align=right>***</td></tr>
+<tr><td>Hill (D)</td>      <td></td><td align=right>55</td></tr>
 <tr><td>Anderson</td>      <td></td><td align=right>0</td></tr>
 <tr><td>LThomas</td>       <td></td><td align=right>75</td></tr>
 <tr><td>Sanders</td>       <td></td><td align=right>85</td></tr>
 <tr><td>Bass</td>          <td></td><td align=right>40</td></tr>
-<tr><td></td>              <td></td><td align=right>***</td></tr>
+<tr><td></td>              <td></td><td align=right>505</td></tr>
 </table>
 </td>
 <td></td><td></td>
@@ -112,12 +112,12 @@
 <tr><td>Cousins</td>       <td></td><td align=right>325</td></tr>
 <tr><td>Henry</td>         <td></td><td align=right>425</td></tr>
 <tr><td>Dobbins</td>       <td></td><td align=right>330</td></tr>
-<tr><td>Adams (D)</td>     <td></td><td align=right>***</td></tr>
+<tr><td>Adams (D)</td>     <td></td><td align=right>80</td></tr>
 <tr><td>McLaurin</td>      <td></td><td align=right>50</td></tr>
 <tr><td>Kittle</td>        <td></td><td align=right>30</td></tr>
 <tr><td>Carlson</td>       <td></td><td align=right>45</td></tr>
 <tr><td>Herbert</td>       <td></td><td align=right>280</td></tr>
-<tr><td></td>              <td></td><td align=right>***</td></tr>
+<tr><td></td>              <td></td><td align=right>1565</td></tr>
 </table>
 </td>
 </tr>
@@ -169,11 +169,11 @@
 <tr><td><font size=2>Sam(7)</font></td>
     <td><font size=2>11</font></td>
     <td><font size=2>4</font></td>
-    <td><font size=2>13535</font></td>
+    <td><font size=2>15100</font></td>
     <td><font size=2>9130</font></td>
-    <td><font size=2>1555</font></td>
+    <td><font size=2>1565</font></td>
     <td><font size=2>580</font></td>
-    <td><font size=2>5</font></td></tr>
+    <td><font size=2>6</font></td></tr>
 <tr><td><font size=2>States(3)</font></td>
     <td><font size=2>9</font></td>
     <td><font size=2>6</font></td>
@@ -185,7 +185,7 @@
 <tr><td><font size=2>Roger(5)</font></td>
     <td><font size=2>8</font></td>
     <td><font size=2>7</font></td>
-    <td><font size=2>10710</font></td>
+    <td><font size=2>11215</font></td>
     <td><font size=2>10330</font></td>
     <td><font size=2>885</font></td>
     <td><font size=2>335</font></td>
@@ -225,7 +225,7 @@
 <tr><td><font size=2>Randy(8)</font></td>
     <td><font size=2>8</font></td>
     <td><font size=2>7</font></td>
-    <td><font size=2>10575</font></td>
+    <td><font size=2>11435</font></td>
     <td><font size=2>10310</font></td>
     <td><font size=2>1020</font></td>
     <td><font size=2>85</font></td>
@@ -233,7 +233,7 @@
 <tr><td><font size=2>Mike(4)</font></td>
     <td><font size=2>6</font></td>
     <td><font size=2>9</font></td>
-    <td><font size=2>8940</font></td>
+    <td><font size=2>9550</font></td>
     <td><font size=2>9365</font></td>
     <td><font size=2>870</font></td>
     <td><font size=2>280</font></td>
