--- a/boards.html
+++ b/boards.html
@@ -5,6 +5,7 @@
 <table cellpadding=4 cellspacing=0 width=526 border=0>
 <tr>
 <td bgcolor=#F2F2ED>
+<a href="board21.html"><b>2021</b></a><br>
 <a href="board20.html"><b>2020</b></a><br>
 <a href="board19.html"><b>2019</b></a><br>
 <a href="board18.html"><b>2018</b></a><br>
