--- a/schedule.html
+++ b/schedule.html
@@ -4,35 +4,37 @@
 <tr>
 <td>Week 1</td> <td>1-7</td> <td>2-8</td> <td>3-9</td> <td>4-10</td><td>5-6</td></tr>
 <tr bgcolor="#E5E5E5">
-<td>Week 2</td> <td>1-3</td> <td>2-5</td> <td>4-6</td> <td>7-9</td> <td>8-10</td></tr>
+<td>Week 2</td> <td>1-3</td> <td>2-5</td> <td>4-7</td> <td>6-9</td> <td>8-10</td></tr>
 <tr>
-<td>Week 3</td> <td>1-9</td> <td>2-10</td><td>3-6</td> <td>4-8</td> <td>5-7</td></tr>
+<td>Week 3</td> <td>1-4</td> <td>2-9</td> <td>3-5</td> <td>6-8</td> <td>7-10</td></tr>
 <tr bgcolor="#E5E5E5">
-<td>Week 4</td> <td>1-8</td> <td>2-6</td> <td>3-10</td><td>4-7</td> <td>5-9</td></tr>
+<td>Week 4</td> <td>1-8</td> <td>2-6</td> <td>3-10</td><td>4-5</td> <td>7-9</td></tr>
 <tr>
-<td>Week 5</td> <td>1-4</td> <td>2-9</td> <td>3-5</td> <td>6-8</td> <td>7-10</td></tr>
+<td>Week 5</td> <td>1-10</td><td>2-3</td> <td>4-6</td> <td>5-9</td> <td>7-8</td></tr>
 <tr bgcolor="#E5E5E5">
-<td>Week 6</td> <td>1-5</td> <td>2-4</td> <td>3-7</td> <td>6-10</td><td>8-9</td></tr>
+<td>Week 6</td> <td>1-9</td> <td>2-10</td><td>3-6</td> <td>4-8</td> <td>5-7</td></tr>
 <tr>
-<td>Week 7</td> <td>1-6</td> <td>2-3</td> <td>4-9</td> <td>5-10</td><td>7-8</td></tr>
+<td>Week 7</td> <td>1-5</td> <td>2-4</td> <td>3-7</td> <td>6-10</td><td>8-9</td></tr>
 <tr bgcolor="#E5E5E5">
-<td>Week 8</td> <td>1-10</td><td>2-7</td> <td>3-4</td> <td>5-8</td> <td>6-9</td></tr>
+<td>Week 8</td> <td>1-6</td> <td>2-7</td> <td>3-8</td> <td>4-9</td> <td>5-10</td></tr>
 <tr>
-<td>Week 9</td> <td>1-2</td> <td>3-8</td> <td>4-5</td> <td>6-7</td> <td>9-10</td></tr>
+<td>Week 9</td> <td>1-2</td> <td>3-4</td> <td>5-8</td> <td>6-7</td> <td>9-10</td></tr>
 <tr bgcolor="#E5E5E5">
 <td>Week 10</td><td>1-7</td> <td>2-8</td> <td>3-9</td> <td>4-10</td><td>5-6</td></tr>
 <tr>
-<td>Week 11</td><td>1-3</td> <td>2-5</td> <td>4-6</td> <td>7-9</td> <td>8-10</td></tr>
+<td>Week 11</td><td>1-3</td> <td>2-5</td> <td>4-7</td> <td>6-9</td> <td>8-10</td></tr>
 <tr bgcolor="#E5E5E5">
-<td>Week 12</td><td>1-9</td> <td>2-10</td><td>3-6</td> <td>4-8</td> <td>5-7</td></tr>
+<td>Week 12</td><td>1-4</td> <td>2-9</td> <td>3-5</td> <td>6-8</td> <td>7-10</td></tr>
 <tr>
-<td>Week 13</td><td>1-8</td> <td>2-6</td> <td>3-10</td><td>4-7</td> <td>5-9</td></tr>
+<td>Week 13</td><td>1-8</td> <td>2-6</td> <td>3-10</td><td>4-5</td> <td>7-9</td></tr>
 <tr bgcolor="#E5E5E5">
-<td>Week 14</td><td>1-4</td> <td>2-9</td> <td>3-5</td> <td>6-8</td> <td>7-10</td></tr>
+<td>Week 14</td><td>1-10</td><td>2-3</td> <td>4-6</td> <td>5-9</td> <td>7-8</td></tr>
 <tr>
-<td>Week 15</td><td>1-5</td> <td>2-4</td> <td>3-7</td> <td>6-10</td><td>8-9</td></tr>
+<td>Week 15</td><td>1-9</td> <td>2-10</td><td>3-6</td> <td>4-8</td> <td>5-7</td></tr>
 <tr bgcolor="#E5E5E5">
-<td>Week 16</td><td colspan="5">Playoffs  1st Odd-2nd Even   1st Even-2nd Odd</td></tr>
+<td>Week 16</td><td>1-5</td> <td>2-4</td> <td>3-7</td> <td>6-10</td><td>8-9</td></tr>
 <tr>
-<td>Week 17</td><td colspan="5">Fantasy Bowl</td></tr>
+<td>Week 17</td><td colspan="5">Playoffs  1st Odd-2nd Even   1st Even-2nd Odd</td></tr>
+<tr bgcolor="#E5E5E5">
+<td>Week 18</td><td colspan="5">Fantasy Bowl</td></tr>
 </table>
