--- a/board21.html
+++ b/board21.html
@@ -26,7 +26,7 @@
     <td>Nick<br>Chubb</td>
     <td>Jonathan<br>Taylor</td></tr>
 <tr><td>2</td>
-    <td>Travis<br>Kelce</td></tr>
+    <td>Travis<br>Kelce</td>
     <td>Joe<br>Mixon</td>
     <td>Calvin<br>Ridley</td>
     <td>Zach<br>Wilson</td>
@@ -35,7 +35,7 @@
     <td>Saquon<br>Barkley</td>
     <td>Trevor<br>Lawrence</td>
     <td>Davante<br>Adams</td>
-    <td>Aaron<br>Jones</td>
+    <td>Aaron<br>Jones</td></tr>
 <tr><td>3</td>
     <td>Mac<br>Jones</td>
     <td>DK<br>Metcalf</td>
@@ -48,7 +48,7 @@
     <td>Austin<br>Ekeler</td>
     <td>Justin<br>Fields</td></tr>
 <tr><td>4</td>
-    <td>D'Andre<br>Swift</td></tr>
+    <td>D'Andre<br>Swift</td>
     <td>Mike<br>Evans</td>
     <td>James<br>Robinson</td>
     <td>Terry<br>McLaurin</td>
@@ -57,7 +57,7 @@
     <td>Trey<br>Sermon</td>
     <td>George<br>Kittle</td>
     <td>Trey<br>Lance</td>
-    <td>DeAndre<br>Hopkins</td>
+    <td>DeAndre<br>Hopkins</td></tr>
 <tr><td>5</td>
     <td>Kyler<br>Murray</td>
     <td>Gus<br>Edwards</td>
@@ -70,7 +70,7 @@
     <td>Kareem<br>Hunt</td>
     <td>Keenan<br>Allen</td></tr>
 <tr><td>6</td>
-    <td>Adam<br>Thielen</td></tr>
+    <td>Adam<br>Thielen</td>
     <td>Chris<br>Godwin</td>
     <td>Quinn<br>Nordin</td>
     <td>Justin<br>Herbert</td>
@@ -79,7 +79,7 @@
     <td>Kyle<br>Pitts</td>
     <td>Darrell<br>Henderson</td>
     <td>Aaron<br>Rodgers</td>
-    <td>Evan<br>McPherson</td>
+    <td>Evan<br>McPherson</td></tr>
 <tr><td>7</td>
     <td>Tyler<br>Lockett</td>
     <td>Chuba<br>Hubbard</td>
@@ -92,7 +92,7 @@
     <td>Julio<br>Jones</td>
     <td>Myles<br>Gaskin</td></tr>
 <tr><td>8</td>
-    <td>Jamaal<br>Williams</td></tr>
+    <td>Jamaal<br>Williams</td>
     <td>Elijah<br>Moore</td>
     <td>Logan<br>Thomas</td>
     <td>Raheem<br>Mostert</td>
@@ -101,7 +101,7 @@
     <td>Odell<br>Beckham</td>
     <td>Damien<br>Harris</td>
     <td>TJ<br>Hockenson</td>
-    <td>DJ<br>Moore</td>
+    <td>DJ<br>Moore</td></tr>
 <tr><td>9</td>
     <td>Dak<br>Prescott</td>
     <td>AJ<br>Dillon</td>
@@ -114,7 +114,7 @@
     <td>Brandon<br>Aiyuk</td>
     <td>Ryan<br>Tannehill</td></tr>
 <tr><td>10</td>
-    <td>Tee<br>Higgins</td></tr>
+    <td>Tee<br>Higgins</td>
     <td>Rob<br>Gronkowski</td>
     <td>Melvin<br>Gordon</td>
     <td>Mike<br>Gesicki</td>
@@ -123,7 +123,7 @@
     <td>Michael<br>Carter</td>
     <td>Matthew<br>Stafford</td>
     <td>Rhamondre<br>Stevenson</td>
-    <td>Jalen<br>Hurts</td>
+    <td>Jalen<br>Hurts</td></tr>
 <tr><td>11</td>
     <td>Davis<br>Mills</td>
     <td>Rondale<br>Moore</td>
@@ -136,7 +136,7 @@
     <td>Ronald<br>Jones</td>
     <td>Dallas<br>Goedert</td></tr>
 <tr><td>12</td>
-    <td>Kenyan<br>Drake</td></tr>
+    <td>Kenyan<br>Drake</td>
     <td>Leonard<br>Fournette</td>
     <td>Joe<br>Burrow</td>
     <td>Tua<br>Tagovailoa</td>
@@ -145,7 +145,7 @@
     <td>Will<br>Fuller</td>
     <td>Kenny<br>Golladay</td>
     <td>Jerry<br>Jeudy</td>
-    <td>David<br>Johnson</td>
+    <td>David<br>Johnson</td></tr>
 <tr><td>13</td>
     <td>Latavius<br>Murray</td>
     <td>Devin<br>Singletary</td>
@@ -158,7 +158,7 @@
     <td>Tyler<br>Higbee</td>
     <td>Nyheim<br>Hines</td></tr>
 <tr><td>14</td>
-    <td>Laviska<br>Shenault</td></tr>
+    <td>Laviska<br>Shenault</td>
     <td>Jared<br>Cook</td>
     <td>Jonnu<br>Smith</td>
     <td>Robby<br>Anderson</td>
@@ -167,7 +167,7 @@
     <td>Antonio<br>Brown</td>
     <td>Justin<br>Tucker</td>
     <td>Ty'Son<br>Williams</td>
-    <td>Jakobi<br>Meyers</td>
+    <td>Jakobi<br>Meyers</td></tr>
 <tr><td>15</td>
     <td>Rashod<br>Bateman</td>
     <td>Ben<br>Roethlisberger</td>
@@ -180,7 +180,7 @@
     <td>Deebo<br>Samuel</td>
     <td>Marquez<br>Callaway</td></tr>
 <tr><td>16</td>
-    <td>Brandon<br>McManus</td></tr>
+    <td>Brandon<br>McManus</td>
     <td>Robbie<br>Gould</td>
     <td>Younghoe<br>Koo</td>
     <td>Jason<br>Sanders</td>
@@ -189,7 +189,7 @@
     <td>Jake<br>Verity</td>
     <td>Jameis<br>Winston</td>
     <td>Kadarius<br>Toney</td>
-    <td>JJ<br>Taylor</td>
+    <td>JJ<br>Taylor</td></tr>
 <tr><td>17</td>
     <td>Chris<br>Naggar</td>
     <td>Austin<br>Hooper</td>
@@ -202,7 +202,7 @@
     <td>Matt<br>Gay</td>
     <td>Ryan<br>Succop</td></tr>
 <tr><td>18</td>
-    <td>Matt<br>Prater</td></tr>
+    <td>Matt<br>Prater</td>
     <td>Jason<br>Myers</td>
     <td>Brandin<br>Cooks</td>
     <td>Jaret<br>Patterson</td>
@@ -211,5 +211,5 @@
     <td>Gabriel<br>Davis</td>
     <td>Corey<br>Davis</td>
     <td>Phillip<br>Lindsay</td>
-    <td>Cole<br>Kmet</td>
+    <td>Cole<br>Kmet</td></tr>
 </table>
