--- a/index.html
+++ b/index.html
@@ -25,30 +25,14 @@
 <tr>
 <td bgcolor=#F2F2ED>
 <b>Week</b>
-<a href="week1.html"><b>1</b></a>
-<a href="week2.html"><b>2</b></a>
-<a href="week3.html"><b>3</b></a>
-<a href="week4.html"><b>4</b></a>
-<a href="week5.html"><b>5</b></a>
-<a href="week6.html"><b>6</b></a>
-<a href="week7.html"><b>7</b></a>
-<a href="week8.html"><b>8</b></a>
-<a href="week9.html"><b>9</b></a>
-<a href="week10.html"><b>10</b></a>
-<a href="week11.html"><b>11</b></a>
-<a href="week12.html"><b>12</b></a>
-<a href="week13.html"><b>13</b></a>
-<a href="week14.html"><b>14</b></a>
-<a href="week15.html"><b>15</b></a>
-<a href="week16.html"><b>16</b></a>
-<a href="week17.html"><b>17</b></a><br>
+<a href="week1.html"><b>1P</b></a><br>
 <a href="roster.html"><b>Roster</b></a><br>
 <a href="pickups.html"><b>Pickups & Trades</b></a><br>
 <a href="leader.html"><b>Current Leaderboard</b></a><br>
-<!--
 <a href="freeagt.html"><b>Free Agent Leaderboard</b></a><br>
--->
+<!--
 <a href="treasury.html"><b>Money Winners</b></a><br>
+-->
 <a href="strength.html"><b>Strengths and Weaknesses</b></a>
 <br>
 </td>
@@ -74,46 +58,46 @@
     <td bgcolor=#B3B3B3><font size=3.5 color='purple'><b>High</b></font></td>
     <td bgcolor=#B3B3B3><font size=3.5 color='purple'><b>Low</b></font></td>
     <td bgcolor=#B3B3B3><font size=3.5 color='purple'><b>Weeks Won</b></font></td></tr>
-<tr><td><font size=2>Sam(7)</font></td>
-    <td><font size=2>11</font></td>
-    <td><font size=2>4</font></td>
-    <td><font size=2>15100</font></td>
-    <td><font size=2>9130</font></td>
-    <td><font size=2>1565</font></td>
-    <td><font size=2>580</font></td>
-    <td><font size=2>6</font></td></tr>
-<tr><td><font size=2>States(3)</font></td>
-    <td><font size=2>9</font></td>
-    <td><font size=2>6</font></td>
-    <td><font size=2>11710</font></td>
-    <td><font size=2>9850</font></td>
-    <td><font size=2>1010</font></td>
-    <td><font size=2>210</font></td>
-    <td><font size=2>0</font></td></tr>
-<tr><td><font size=2>Roger(5)</font></td>
-    <td><font size=2>8</font></td>
-    <td><font size=2>7</font></td>
-    <td><font size=2>11215</font></td>
-    <td><font size=2>10330</font></td>
-    <td><font size=2>885</font></td>
-    <td><font size=2>335</font></td>
-    <td><font size=2>1</font></td></tr>
-<tr><td><font size=2>Rich(1)</font></td>
-    <td><font size=2>8</font></td>
-    <td><font size=2>7</font></td>
-    <td><font size=2>10935</font></td>
-    <td><font size=2>9540</font></td>
-    <td><font size=2>1030</font></td>
-    <td><font size=2>250</font></td>
-    <td><font size=2>1</font></td></tr>
-<tr><td><font size=2>Grant(9)</font></td>
-    <td><font size=2>7</font></td>
-    <td><font size=2>8</font></td>
-    <td><font size=2>11015</font></td>
-    <td><font size=2>9360</font></td>
-    <td><font size=2>1005</font></td>
-    <td><font size=2>240</font></td>
-    <td><font size=2>0</font></td></tr>
+<tr><td><font size=2>Matthew(1)</font></td>
+    <td><font size=2>0</font></td>
+    <td><font size=2>0</font></td>
+    <td><font size=2>0</font></td>
+    <td><font size=2>0</font></td>
+    <td><font size=2>0</font></td>
+    <td><font size=2>0</font></td>
+    <td><font size=2>0</font></td>
+<tr><td><font size=2>Steven(3)</font></td>
+    <td><font size=2>0</font></td>
+    <td><font size=2>0</font></td>
+    <td><font size=2>0</font></td>
+    <td><font size=2>0</font></td>
+    <td><font size=2>0</font></td>
+    <td><font size=2>0</font></td>
+    <td><font size=2>0</font></td>
+<tr><td><font size=2>Mike(5)</font></td>
+    <td><font size=2>0</font></td>
+    <td><font size=2>0</font></td>
+    <td><font size=2>0</font></td>
+    <td><font size=2>0</font></td>
+    <td><font size=2>0</font></td>
+    <td><font size=2>0</font></td>
+    <td><font size=2>0</font></td>
+<tr><td><font size=2>Roger(7)</font></td>
+    <td><font size=2>0</font></td>
+    <td><font size=2>0</font></td>
+    <td><font size=2>0</font></td>
+    <td><font size=2>0</font></td>
+    <td><font size=2>0</font></td>
+    <td><font size=2>0</font></td>
+    <td><font size=2>0</font></td>
+<tr><td><font size=2>Sam(9)</font></td>
+    <td><font size=2>0</font></td>
+    <td><font size=2>0</font></td>
+    <td><font size=2>0</font></td>
+    <td><font size=2>0</font></td>
+    <td><font size=2>0</font></td>
+    <td><font size=2>0</font></td>
+    <td><font size=2>0</font></td>
 <tr><td><font size=2></font></td>
     <td><font size=2></font></td>
     <td><font size=2></font></td>
@@ -122,46 +106,46 @@
     <td><font size=2></font></td>
     <td><font size=2></font></td>
     <td><font size=2></font></td></tr>
-<tr><td><font size=2>Steven(2)</font></td>
-    <td><font size=2>9</font></td>
-    <td><font size=2>6</font></td>
-    <td><font size=2>12710</font></td>
-    <td><font size=2>9330</font></td>
-    <td><font size=2>1195</font></td>
-    <td><font size=2>255</font></td>
-    <td><font size=2>5</font></td></tr>
+<tr><td><font size=2>Rich(2)</font></td>
+    <td><font size=2>0</font></td>
+    <td><font size=2>0</font></td>
+    <td><font size=2>0</font></td>
+    <td><font size=2>0</font></td>
+    <td><font size=2>0</font></td>
+    <td><font size=2>0</font></td>
+    <td><font size=2>0</font></td>
+<tr><td><font size=2>Grant(4)</font></td>
+    <td><font size=2>0</font></td>
+    <td><font size=2>0</font></td>
+    <td><font size=2>0</font></td>
+    <td><font size=2>0</font></td>
+    <td><font size=2>0</font></td>
+    <td><font size=2>0</font></td>
+    <td><font size=2>0</font></td>
+<tr><td><font size=2>States(6)</font></td>
+    <td><font size=2>0</font></td>
+    <td><font size=2>0</font></td>
+    <td><font size=2>0</font></td>
+    <td><font size=2>0</font></td>
+    <td><font size=2>0</font></td>
+    <td><font size=2>0</font></td>
+    <td><font size=2>0</font></td>
 <tr><td><font size=2>Randy(8)</font></td>
-    <td><font size=2>8</font></td>
-    <td><font size=2>7</font></td>
-    <td><font size=2>11435</font></td>
-    <td><font size=2>10310</font></td>
-    <td><font size=2>1020</font></td>
-    <td><font size=2>85</font></td>
-    <td><font size=2>3</font></td></tr>
-<tr><td><font size=2>Mike(4)</font></td>
-    <td><font size=2>6</font></td>
-    <td><font size=2>9</font></td>
-    <td><font size=2>9550</font></td>
-    <td><font size=2>9365</font></td>
-    <td><font size=2>870</font></td>
-    <td><font size=2>280</font></td>
-    <td><font size=2>0</font></td></tr>
-<tr><td><font size=2>John(6)</font></td>
-    <td><font size=2>5</font></td>
-    <td><font size=2>10</font></td>
-    <td><font size=2>9870</font></td>
-    <td><font size=2>10550</font></td>
-    <td><font size=2>830</font></td>
-    <td><font size=2>370</font></td>
-    <td><font size=2>0</font></td></tr>
-<tr><td><font size=2>Matthew(10)</font></td>
-    <td><font size=2>4</font></td>
-    <td><font size=2>11</font></td>
-    <td><font size=2>9075</font></td>
-    <td><font size=2>10285</font></td>
-    <td><font size=2>940</font></td>
-    <td><font size=2>195</font></td>
-    <td><font size=2>1</font></td></tr>
+    <td><font size=2>0</font></td>
+    <td><font size=2>0</font></td>
+    <td><font size=2>0</font></td>
+    <td><font size=2>0</font></td>
+    <td><font size=2>0</font></td>
+    <td><font size=2>0</font></td>
+    <td><font size=2>0</font></td>
+<tr><td><font size=2>John(10)</font></td>
+    <td><font size=2>0</font></td>
+    <td><font size=2>0</font></td>
+    <td><font size=2>0</font></td>
+    <td><font size=2>0</font></td>
+    <td><font size=2>0</font></td>
+    <td><font size=2>0</font></td>
+    <td><font size=2>0</font></td>
 </table>
 </table>
 </body>
