--- a/week1.html
+++ b/week1.html
@@ -23,7 +23,7 @@
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Roger (7)</b></font></td></tr>
 <tr><td>Brady</td>         <td></td><td align=right>0</td></tr>
 <tr><td>Henry</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Barkley</td>       <td></td><td align=right>0</td></tr>
+<tr><td>Sermon</td>        <td></td><td align=right>0</td></tr>
 <tr><td>ABrown</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Cooper</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Waller</td>        <td></td><td align=right>0</td></tr>
@@ -98,8 +98,8 @@
 <tr><td>Herbert</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Kamara</td>        <td></td><td align=right>0</td></tr>
 <tr><td>EdwardsHelaire</td><td></td><td align=right>0</td></tr>
-<tr><td>McLaurin</td>      <td></td><td align=right>0</td></tr>
 <tr><td>Lamb</td>          <td></td><td align=right>0</td></tr>
+<tr><td>RAnderson</td>     <td></td><td align=right>0</td></tr>
 <tr><td>Gesicki</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Sanders</td>       <td></td><td align=right>0</td></tr>
 <tr><td>ZWilson</td>       <td></td><td align=right>0</td></tr>
