--- a/history.html
+++ b/history.html
@@ -11,7 +11,7 @@
 <a href="points.html"><b>Points Finish</b></a><br>
 <a href="individual.html"><b>Highest Week Hall of Fame</b></a><br>
 <a href="htoh.html"><b>Head to Head</b></a><br>
-<a href="boards.html"><b>Draft Board Archives</b></a>
+<a href="boards.html"><b>Draft Board Archives</b></a><br>
 <a href="leaders.html"><b>Leaderboard Archives</b></a>
 </td>
 </tr>
