--- a/pickups.html
+++ b/pickups.html
@@ -1,7 +1,71 @@
 <table cellpadding=0 cellspacing=0 width=650 border=0>
 <tr>
+<td bgcolor='purple'><font size=4 color=#F2F2ED><b>Matthew</b></font></td>
 <td bgcolor='purple'><font size=4 color=#F2F2ED><b>Rich</b></font></td>
+</tr>
+<tr>
+<td><table><tr>
+<td width=15>1)</td>
+<td width=370></td>
+<td width=50></td>
+</tr></table></td>
+<td><table><tr>
+<td width=15>1)</td>
+<td width=370>Matt Breida/Gus Edwards</td>
+<td width=50>9/9</td>
+</tr></table></td>
+</tr>
+<tr>
+<td><table><tr>
+<td width=15>2)</td>
+<td width=370></td>
+<td width=50></td>
+</tr></table></td>
+<td><table><tr>
+<td width=15>2)</td>
+<td width=370></td>
+<td width=50></td>
+</tr></table></td>
+</tr>
+<tr>
+<td><table><tr>
+<td width=15>3)</td>
+<td width=370></td>
+<td width=50></td>
+</tr></table></td>
+<td><table><tr>
+<td width=15>3)</td>
+<td width=370></td>
+<td width=50></td>
+</tr></table></td>
+</tr>
+<tr>
+<td><table><tr>
+<td width=15>4)</td>
+<td width=370></td>
+<td width=50></td>
+</tr></table></td>
+<td><table><tr>
+<td width=15>4)</td>
+<td width=370></td>
+<td width=50></td>
+</tr></table></td>
+</tr>
+<tr>
+<td><table><tr>
+<td width=15>5)</td>
+<td width=370></td>
+<td width=50></td>
+</tr></table></td>
+<td><table><tr>
+<td width=15>5)</td>
+<td width=370></td>
+<td width=50></td>
+</tr></table></td>
+</tr>
+<tr>
 <td bgcolor='purple'><font size=4 color=#F2F2ED><b>Steven</b></font></td>
+<td bgcolor='purple'><font size=4 color=#F2F2ED><b>Grant</b></font></td>
 </tr>
 <tr>
 <td><table><tr>
@@ -11,96 +75,96 @@
 </tr></table></td>
 <td><table><tr>
 <td width=15>1)</td>
-<td width=370>Darius Slayton/Ke'Shawn Vaughn</td>
-<td width=50>9/15</td>
-</tr></table></td>
-</tr>
-<tr>
-<td><table><tr>
-<td width=15>2)</td>
-<td width=370></td>
-<td width=50></td>
-</tr></table></td>
-<td><table><tr>
-<td width=15>2)</td>
-<td width=370>Dalton Schultz/Hunter Henry</td>
-<td width=50>10/16</td>
-</tr></table></td>
-</tr>
-<tr>
-<td><table><tr>
-<td width=15>3)</td>
-<td width=370></td>
-<td width=50></td>
-</tr></table></td>
-<td><table><tr>
-<td width=15>3)</td>
-<td width=370>Zane Gonzalez/Robbie Gould</td>
-<td width=50>11/17</td>
-</tr></table></td>
-</tr>
-<tr>
-<td><table><tr>
-<td width=15>4)</td>
-<td width=370></td>
-<td width=50></td>
-</tr></table></td>
-<td><table><tr>
-<td width=15>4)</td>
-<td width=370>Ka'imi Fairbairn/Zane Gonzalez</td>
-<td width=50>12/13</td>
-</tr></table></td>
-</tr>
-<tr>
-<td><table><tr>
-<td width=15>5)</td>
-<td width=370></td>
-<td width=50></td>
-</tr></table></td>
-<td><table><tr>
-<td width=15>5)</td>
-<td width=370></td>
-<td width=50></td>
-</tr></table></td>
-</tr>
-<tr>
-<td bgcolor='purple'><font size=4 color=#F2F2ED><b>States</b></font></td>
-<td bgcolor='purple'><font size=4 color=#F2F2ED><b>Mike</b></font></td>
-</tr>
-<tr>
-<td><table><tr>
-<td width=15>1)</td>
-<td width=370>Mike Gesicki/Cole Kmet</td>
-<td width=50>9/21</td>
-</tr></table></td>
-<td><table><tr>
-<td width=15>1)</td>
-<td width=370>James Robinson/Dalton Keene</td>
+<td width=370>Tony Jones/Alexander Mattison</td>
 <td width=50>9/10</td>
 </tr></table></td>
 </tr>
 <tr>
 <td><table><tr>
 <td width=15>2)</td>
-<td width=370>Cairo Santos/Tyrod Taylor</td>
-<td width=50>10/25</td>
+<td width=370></td>
+<td width=50></td>
 </tr></table></td>
 <td><table><tr>
 <td width=15>2)</td>
-<td width=370>Donovan Peoples-Jones/Rex Burkhead</td>
-<td width=50>10/26</td>
+<td width=370></td>
+<td width=50></td>
 </tr></table></td>
 </tr>
 <tr>
 <td><table><tr>
 <td width=15>3)</td>
-<td width=370>Austin Hooper/James Washington</td>
-<td width=50>12/23</td>
+<td width=370></td>
+<td width=50></td>
 </tr></table></td>
 <td><table><tr>
 <td width=15>3)</td>
-<td width=370>Wayne Gallman/Carlos Hyde</td>
-<td width=50>11/10</td>
+<td width=370></td>
+<td width=50></td>
+</tr></table></td>
+</tr>
+<tr>
+<td><table><tr>
+<td width=15>4)</td>
+<td width=370></td>
+<td width=50></td>
+</tr></table></td>
+<td><table><tr>
+<td width=15>4)</td>
+<td width=370></td>
+<td width=50></td>
+</tr></table></td>
+</tr>
+<tr>
+<td><table><tr>
+<td width=15>5)</td>
+<td width=370></td>
+<td width=50></td>
+</tr></table></td>
+<td><table><tr>
+<td width=15>5)</td>
+<td width=370></td>
+<td width=50></td>
+</tr></table></td>
+</tr>
+<tr>
+<td bgcolor='purple'><font size=4 color=#F2F2ED><b>Mike</b></font></td>
+<td bgcolor='purple'><font size=4 color=#F2F2ED><b>States</b></font></td>
+</tr>
+<tr>
+<td><table><tr>
+<td width=15>1)</td>
+<td width=370></td>
+<td width=50></td>
+</tr></table></td>
+<td><table><tr>
+<td width=15>1)</td>
+<td width=370></td>
+<td width=50></td>
+</tr></table></td>
+</tr>
+<tr>
+<td><table><tr>
+<td width=15>2)</td>
+<td width=370></td>
+<td width=50></td>
+</tr></table></td>
+<td><table><tr>
+<td width=15>2)</td>
+<td width=370></td>
+<td width=50></td>
+</tr></table></td>
+</tr>
+<tr>
+<td><table><tr>
+<td width=15>3)</td>
+<td width=370></td>
+<td width=50></td>
+</tr></table></td>
+<td><table><tr>
+<td width=15>3)</td>
+<td width=370></td>
+<td width=50></td>
 </tr></table></td>
 </tr>
 <tr>
@@ -129,54 +193,54 @@
 </tr>
 <tr>
 <td bgcolor='purple'><font size=4 color=#F2F2ED><b>Roger</b></font></td>
-<td bgcolor='purple'><font size=4 color=#F2F2ED><b>John</b></font></td>
+<td bgcolor='purple'><font size=4 color=#F2F2ED><b>Randy</b></font></td>
 </tr>
 <tr>
 <td><table><tr>
 <td width=15>1)</td>
-<td width=370>Myles Gaskin/Josh Gordon</td>
-<td width=50>9/25</td>
+<td width=370>Le'Veon Bell/Jake Verity</td>
+<td width=50>9/9</td>
 </tr></table></td>
 <td><table><tr>
 <td width=15>1)</td>
-<td width=370>Dallas Goedert/Anthony McFarland</td>
-<td width=50>9/15</td>
+<td width=370></td>
+<td width=50></td>
 </tr></table></td>
 </tr>
 <tr>
 <td><table><tr>
 <td width=15>2)</td>
-<td width=370>Andy Dalton/Kyle Rudolph</td>
-<td width=50>10/13</td>
+<td width=370></td>
+<td width=50></td>
 </tr></table></td>
 <td><table><tr>
 <td width=15>2)</td>
-<td width=370>Ben Roethlisberger/Daniel Jones</td>
-<td width=50>9/22</td>
+<td width=370></td>
+<td width=50></td>
 </tr></table></td>
 </tr>
 <tr>
 <td><table><tr>
 <td width=15>3)</td>
-<td width=370>Jason Sanders/Jarvis Landry</td>
-<td width=50>10/18</td>
+<td width=370></td>
+<td width=50></td>
 </tr></table></td>
 <td><table><tr>
 <td width=15>3)</td>
-<td width=370>DeeJay Dallas/Brandon McManus</td>
-<td width=50>10/27</td>
+<td width=370></td>
+<td width=50></td>
 </tr></table></td>
 </tr>
 <tr>
 <td><table><tr>
 <td width=15>4)</td>
-<td width=370>Logan Thomas/Evan Engram</td>
-<td width=50>12/19</td>
+<td width=370></td>
+<td width=50></td>
 </tr></table></td>
 <td><table><tr>
 <td width=15>4)</td>
-<td width=370>Jake Luton/Mark Ingram</td>
-<td width=50>10/30</td>
+<td width=370></td>
+<td width=50></td>
 </tr></table></td>
 </tr>
 <tr>
@@ -193,42 +257,42 @@
 </tr>
 <tr>
 <td bgcolor='purple'><font size=4 color=#F2F2ED><b>Sam</b></font></td>
-<td bgcolor='purple'><font size=4 color=#F2F2ED><b>Randy</b></font></td>
+<td bgcolor='purple'><font size=4 color=#F2F2ED><b>John</b></font></td>
 </tr>
 <tr>
 <td><table><tr>
 <td width=15>1)</td>
-<td width=370>Stephen Gostkowski/Duke Johnson</td>
-<td width=50>10/13</td>
+<td width=370></td>
+<td width=50></td>
 </tr></table></td>
 <td><table><tr>
 <td width=15>1)</td>
-<td width=370>Jonnu Smith/Baker Mayfield</td>
-<td width=50>9/14</td>
+<td width=370></td>
+<td width=50></td>
 </tr></table></td>
 </tr>
 <tr>
 <td><table><tr>
 <td width=15>2)</td>
-<td width=370>Daniel Carlson/Jake Elliott</td>
-<td width=50>11/29</td>
+<td width=370></td>
+<td width=50></td>
 </tr></table></td>
 <td><table><tr>
 <td width=15>2)</td>
-<td width=370>Hunter Henry/Malcolm Brown</td>
-<td width=50>10/20</td>
+<td width=370></td>
+<td width=50></td>
 </tr></table></td>
 </tr>
 <tr>
 <td><table><tr>
 <td width=15>3)</td>
-<td width=370>Marvin Jones/Duke Johnson</td>
-<td width=50>12/25</td>
+<td width=370></td>
+<td width=50></td>
 </tr></table></td>
 <td><table><tr>
 <td width=15>3)</td>
-<td width=370>Matt Prater/Austin Hooper</td>
-<td width=50>11/7</td>
+<td width=370></td>
+<td width=50></td>
 </tr></table></td>
 </tr>
 <tr>
@@ -236,70 +300,6 @@
 <td width=15>4)</td>
 <td width=370></td>
 <td width=50></td>
-</tr></table></td>
-<td><table><tr>
-<td width=15>4)</td>
-<td width=370>Tony Pollard/Darnell Mooney</td>
-<td width=50>12/23</td>
-</tr></table></td>
-</tr>
-<tr>
-<td><table><tr>
-<td width=15>5)</td>
-<td width=370></td>
-<td width=50></td>
-</tr></table></td>
-<td><table><tr>
-<td width=15>5)</td>
-<td width=370></td>
-<td width=50></td>
-</tr></table></td>
-</tr>
-<tr>
-<td bgcolor='purple'><font size=4 color=#F2F2ED><b>Grant</b></font></td>
-<td bgcolor='purple'><font size=4 color=#F2F2ED><b>Matthew</b></font></td>
-</tr>
-<tr>
-<td><table><tr>
-<td width=15>1)</td>
-<td width=370>Nyheim Hines/Devin Asiasi</td>
-<td width=50>9/15</td>
-</tr></table></td>
-<td><table><tr>
-<td width=15>1)</td>
-<td width=370>Jerick McKinnon/Devin Duvernay</td>
-<td width=50>9/22</td>
-</tr></table></td>
-</tr>
-<tr>
-<td><table><tr>
-<td width=15>2)</td>
-<td width=370>Devonta Freeman/Chris Herndon</td>
-<td width=50>9/22</td>
-</tr></table></td>
-<td><table><tr>
-<td width=15>2)</td>
-<td width=370>Kalen Ballage/Ben DiNucci</td>
-<td width=50>11/17</td>
-</tr></table></td>
-</tr>
-<tr>
-<td><table><tr>
-<td width=15>3)</td>
-<td width=370>Robert Tonyan/Marvin Jones</td>
-<td width=50>10/14</td>
-</tr></table></td>
-<td><table><tr>
-<td width=15>3)</td>
-<td width=370>Eric Ebron/Corey Davis</td>
-<td width=50>11/17</td>
-</tr></table></td>
-</tr>
-<tr>
-<td><table><tr>
-<td width=15>4)</td>
-<td width=370>KJ Hamler/Kerryon Johnson</td>
-<td width=50>11/4</td>
 </tr></table></td>
 <td><table><tr>
 <td width=15>4)</td>
@@ -310,8 +310,8 @@
 <tr>
 <td><table><tr>
 <td width=15>5)</td>
-<td width=370>Malcolm Brown/KJ Hamler</td>
-<td width=50>12/30</td>
+<td width=370></td>
+<td width=50></td>
 </tr></table></td>
 <td><table><tr>
 <td width=15>5)</td>
@@ -324,41 +324,10 @@
 <table width=650 border=2>
 <tr bgcolor="#000A78">
 <td colspan=2><font size=4 color='white'><center>Trades</td></tr>
+<!--
 <tr><td width=50>9/3</td>
 <td width=600>
 Free Pickups:<br>
-Team 1  - Ryan Succop/Matt Gay (9/12)<br>
-Team 9  - Marvin Jones/Deebo Samuel (9/13)<br>
-Team 8  - Malcolm Brown/Blake Jarwin (9/15)<br>
-Team 7  - Robby Anderson/Courtland Sutton (9/22)<br>
-Team 2  - Mike Davis/Denzel Mims (9/22)<br>
-Team 7  - Julian Edelman/Damien Harris (9/22)<br>
-Team 8  - Darnell Mooney/Tucker McCann (9/27)<br>
-Team 6  - Mason Crosby/Josh Lambo (9/29)<br>
-Team 9  - Deebo Samuel/Tarik Cohen (9/29)<br>
-Team 7  - Damien Harris/Michael Pittman (10/5)<br>
-Team 4  - Carlos Hyde/Marlon Mack (10/8)<br>
-Team 4  - Rex Burkhead/Saquon Barkley (10/18)<br>
-Team 10 - JaMycal Hasty/Tevin Coleman (10/21)<br>
-Team 3  - Jamaal Williams/Justin Rohrwasser (10/25)<br>
-Team 10 - Jimmy Graham/Zach Ertz (10/25)<br>
-Team 2  - Christian Kirk/Chris Thompson (10/27)<br>
-Team 4  - Rashard Higgins/Emmanuel Sanders (10/27)<br>
-Team 10 - Ben DiNucci/Sam Sloman (10/27)<br>
-Team 9  - Tevin Coleman/Dak Prescott (10/28)<br>
-Team 3  - Derek Carr/Odell Beckham (10/29)<br>
-Team 9  - Justin Jackson/Darrynton Evans (11/4)<br>
-Team 10 - Corey Davis/Jimmy Garoppolo (11/8)<br>
-Team 7  - Duke Johnson/Julian Edelman (11/10)<br>
-Team 9  - Giovani Bernard/Devonta Freeman (11/13)<br>
-Team 10 - Salvon Ahmed/JaMycal Hasty (11/17)<br>
-Team 9  - Devontae Booker/Justin Jackson (11/26)<br>
-Team 10 - Daniel Jones/AJ Dillon (11/29)<br>
-Team 6  - Anthony McFarland/Joe Burrow (12/2)<br>
-Team 10 - Brandon McManus/John Brown (12/6)<br>
-Team 1  - Matt Gay/Ryquell Armstead (12/6)<br>
-Team 6  - Jeff Wilson/La'Mical Perine (12/8)<br>
-Team 10 - Corey Davis/Matt Breida (12/13)<br>
 Team 9  - Baker Mayfield/Joe Mixon (12/26)
 </td></tr>
 <tr><td width=50>9/25</td>
@@ -366,24 +335,5 @@ Team 9  - Baker Mayfield/Joe Mixon (12/26)
 Team 4 - David Montgomery<br>
 Team 5 - D'Andre Swift
 </td></tr>
-<tr><td width=50>9/27</td>
-<td width=600>
-Team 5 - Nyheim Hines<br>
-Team 9 - Darrynton Evans
-</td></tr>
-<tr><td width=50>11/5</td>
-<td width=600>
-Team 3 - Rashard Higgins<br>
-Team 4 - Cairo Santos
-</td></tr>
-<tr><td width=50>11/22</td>
-<td width=600>
-Team 4 - Noah Fant<br>
-Team 5 - Nyheim Hines
-</td></tr>
-<tr><td width=50>11/27</td>
-<td width=600>
-Team 5 - Tyler Bass, Robby Anderson<br>
-Team 7 - Julio Jones, JK Dobbins
-</td></tr>
+-->
 </table>
