--- a/roster.html
+++ b/roster.html
@@ -39,10 +39,10 @@
 <tr><td>PIT</td><td>Ben Roethlisberger     </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>CIN</td><td>Joe Mixon              </td></tr>
-<tr><td>BAL</td><td>Gus Edwards            </td></tr>
 <tr><td> GB</td><td>AJ Dillon              </td></tr>
 <tr><td> TB</td><td>Leonard Fournette      </td></tr>
 <tr><td>BUF</td><td>Devin Singletary       </td></tr>
+<tr><td>BUF</td><td>Matt Breida            </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>SEA</td><td>DK Metcalf             </td></tr>
 <tr><td> TB</td><td>Mike Evans             </td></tr>
@@ -101,7 +101,7 @@
 <tr><td> KC</td><td>Clyde Edwards-Helaire  </td></tr>
 <tr><td> SF</td><td>Raheem Mostert         </td></tr>
 <tr><td>ARI</td><td>James Conner           </td></tr>
-<tr><td>MIN</td><td>Alexander Mattison     </td></tr>
+<tr><td> NO</td><td>Tony Jones             </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>WAS</td><td>Terry McLaurin         </td></tr>
 <tr><td>DAL</td><td>CeeDee Lamb            </td></tr>
@@ -183,6 +183,7 @@
 <tr><td height=9></td><td></td></tr>
 <tr><td>TEN</td><td>Derrick Henry          </td></tr>
 <tr><td>NYG</td><td>Saquon Barkley         </td></tr>
+<tr><td>BAL</td><td>Le'Veon Bell           </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>PIT</td><td>Chase Claypool         </td></tr>
 <tr><td>DAL</td><td>Amari Cooper           </td></tr>
@@ -201,7 +202,6 @@
 <tr><td> SF</td><td>Trey Sermon            </td></tr>
 <tr><td>ATL</td><td>Kyle Pitts             </td></tr>
 <tr><td>NYJ</td><td>Michael Carter         </td></tr>
-<tr><td>BAL</td><td>Jake Verity            </td></tr>
 </table>
 </td>
 <td valign=top>
