--- a/week1.html
+++ b/week1.html
@@ -142,8 +142,8 @@
 <tr><td>RWilson</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Jacobs</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Carson</td>        <td></td><td align=right>0</td></tr>
+<tr><td>Smith-Schuster</td><td></td><td align=right>0</td></tr>
 <tr><td>Hill</td>          <td></td><td align=right>0</td></tr>
-<tr><td>MThomas</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Andrews</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Blankenship</td>   <td></td><td align=right>0</td></tr>
 <tr><td>Harris</td>        <td></td><td align=right>0</td></tr>
