--- a/thousand.html
+++ b/thousand.html
@@ -45,6 +45,12 @@
     <td>1420</td>
     <td>Roger</td>
     <td>285</td></tr>
+<tr><td>2021</td>
+    <td>Week 1</td>
+    <td>Matthew Edwards</td>
+    <td>1360</td>
+    <td>Roger</td>
+    <td>895</td></tr>
 <tr><td>2002</td>
     <td>Week 13</td>
     <td>Randy Edwards</td>
