--- a/pickups.html
+++ b/pickups.html
@@ -11,8 +11,8 @@
 </tr></table></td>
 <td><table><tr>
 <td width=15>1)</td>
-<td width=370>Matt Breida/Gus Edwards</td>
-<td width=50>9/9</td>
+<td width=370></td>
+<td width=50></td>
 </tr></table></td>
 </tr>
 <tr>
@@ -324,12 +324,16 @@
 <table width=650 border=2>
 <tr bgcolor="#000A78">
 <td colspan=2><font size=4 color='white'><center>Trades</td></tr>
-<!--
-<tr><td width=50>9/3</td>
+<tr><td width=50>9/9</td>
 <td width=600>
 Free Pickups:<br>
-Team 9  - Baker Mayfield/Joe Mixon (12/26)
+Team 2  - Matt Breida/Gus Edwards (9/9)<br>
+Team 4  - Eli Mitchell/Raheem Mostert (9/15)<br>
+Team 9  - Larry Rountree/Jerry Jeudy (9/15)<br>
+Team 5  - Derek Carr/Ryan Fitzpatrick (9/16)<br>
+Team 5  - Mark Ingram/Wil Lutz (9/16)
 </td></tr>
+<!--
 <tr><td width=50>9/25</td>
 <td width=600>
 Team 4 - David Montgomery<br>
