--- a/roster.html
+++ b/roster.html
@@ -99,7 +99,6 @@
 <tr><td height=9></td><td></td></tr>
 <tr><td> NO</td><td>Alvin Kamara           </td></tr>
 <tr><td> KC</td><td>Clyde Edwards-Helaire  </td></tr>
-<tr><td> SF</td><td>Raheem Mostert         </td></tr>
 <tr><td>ARI</td><td>James Conner           </td></tr>
 <tr><td> NO</td><td>Tony Jones             </td></tr>
 <tr><td height=9></td><td></td></tr>
@@ -116,18 +115,20 @@
 <tr><td>MIA</td><td>Jaylen Waddle          </td></tr>
 <tr><td>LAR</td><td>Jake Funk              </td></tr>
 <tr><td>WAS</td><td>Jaret Patterson        </td></tr>
+<tr><td> SF</td><td>Eli Mitchell           </td></tr>
 </table>
 </td>
 <td valign=top>
 <table border=0 cellspacing=0 width=204>
 <tr><td bgcolor=#B3B3B3 colspan=2><font color='purple'><b>Mike (5)</b></font></td></tr>
 <tr><td>BUF</td><td>Josh Allen             </td></tr>
-<tr><td>WAS</td><td>Ryan Fitzpatrick       </td></tr>
+<tr><td> LV</td><td>Derek Carr             </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>WAS</td><td>Antonio Gibson         </td></tr>
 <tr><td>CHI</td><td>David Montgomery       </td></tr>
 <tr><td>ARI</td><td>Chase Edmonds          </td></tr>
 <tr><td>BUF</td><td>Zack Moss              </td></tr>
+<tr><td>HOU</td><td>Mark Ingram            </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>MIN</td><td>Justin Jefferson       </td></tr>
 <tr><td>LAR</td><td>Robert Woods           </td></tr>
@@ -140,7 +141,6 @@
 <tr><td>NYG</td><td>Evan Engram            </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>BUF</td><td>Tyler Bass             </td></tr>
-<tr><td> NO</td><td>Wil Lutz               </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>DEN</td><td>Javonte Williams       </td></tr>
 <tr><td>DET</td><td>Amon-Ra St Brown       </td></tr>
@@ -247,7 +247,6 @@
 <tr><td> GB</td><td>Davante Adams          </td></tr>
 <tr><td>TEN</td><td>Julio Jones            </td></tr>
 <tr><td> SF</td><td>Brandon Aiyuk          </td></tr>
-<tr><td>DEN</td><td>Jerry Jeudy            </td></tr>
 <tr><td> SF</td><td>Deebo Samuel           </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>DET</td><td>TJ Hockenson           </td></tr>
@@ -258,6 +257,7 @@
 <tr><td> SF</td><td>Trey Lance             </td></tr>
 <tr><td> NE</td><td>Rhamondre Stevenson    </td></tr>
 <tr><td>NYG</td><td>Kadarius Toney         </td></tr>
+<tr><td>LAC</td><td>Larry Rountree         </td></tr>
 </table>
 </td>
 </tr>
