--- a/week2.html
+++ b/week2.html
@@ -96,7 +96,7 @@
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>States (6)</b></font></td></tr>
 <tr><td>RWilson</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Jacobs</td>        <td></td><td align=right>0</td></tr>
+<tr><td>MDavis</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Carson</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Smith-Schuster</td><td></td><td align=right>0</td></tr>
 <tr><td>Hill</td>          <td></td><td align=right>0</td></tr>
@@ -111,9 +111,9 @@
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Sam (9)</b></font></td></tr>
 <tr><td>Rodgers</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Chubb</td>         <td></td><td align=right>0</td></tr>
-<tr><td>TWilliams</td>     <td></td><td align=right>0</td></tr>
+<tr><td>Ekeler</td>        <td></td><td align=right>0</td></tr>
 <tr><td>DAdams</td>        <td></td><td align=right>0</td></tr>
-<tr><td>JJones</td>        <td></td><td align=right>0</td></tr>
+<tr><td>DSamuel</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Hockenson</td>     <td></td><td align=right>0</td></tr>
 <tr><td>Gay</td>           <td></td><td align=right>0</td></tr>
 <tr><td>Lance</td>         <td></td><td align=right>0</td></tr>
