--- a/thousand.html
+++ b/thousand.html
@@ -411,6 +411,12 @@
     <td>1130</td>
     <td>Sam</td>
     <td>755</td></tr>
+<tr><td>2021</td>
+    <td>Week 2</td>
+    <td>Matthew Edwards</td>
+    <td>1130</td>
+    <td>Steven</td>
+    <td>695</td></tr>
 <tr><td>2001</td>
     <td>Week 7</td>
     <td>Mike Wieczorek</td>
@@ -435,6 +441,12 @@
     <td>1120</td>
     <td>Grant</td>
     <td>485</td></tr>
+<tr><td>2021</td>
+    <td>Week 2</td>
+    <td>Rich Fleck</td>
+    <td>1120</td>
+    <td>Mike</td>
+    <td>450</td></tr>
 <tr><td>2016</td>
     <td>Week 4</td>
     <td>Steven Cohen</td>
