--- a/week2.html
+++ b/week2.html
@@ -7,58 +7,58 @@
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Matthew (1)</b></font></td></tr>
-<tr><td>KMurray</td>       <td></td><td align=right>0</td></tr>
-<tr><td>McCaffrey</td>     <td></td><td align=right>0</td></tr>
+<tr><td>KMurray</td>       <td></td><td align=right>375</td></tr>
+<tr><td>McCaffrey</td>     <td></td><td align=right>165</td></tr>
 <tr><td>Swift</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Thielen</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Lockett</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Kelce</td>         <td></td><td align=right>0</td></tr>
-<tr><td>McManus</td>       <td></td><td align=right>0</td></tr>
+<tr><td>Thielen</td>       <td></td><td align=right>75</td></tr>
+<tr><td>Lockett</td>       <td></td><td align=right>210</td></tr>
+<tr><td>Kelce</td>         <td></td><td align=right>175</td></tr>
+<tr><td>McManus</td>       <td></td><td align=right>130</td></tr>
 <tr><td>MJones</td>        <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>0</td></tr>
+<tr><td></td>              <td></td><td align=right>1130</td></tr>
 </table>
 </td>
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Steven (3)</b></font></td></tr>
-<tr><td>LJackson</td>      <td></td><td align=right>0</td></tr>
-<tr><td>DCook</td>         <td></td><td align=right>0</td></tr>
+<tr><td>LJackson</td>      <td></td><td align=right>280</td></tr>
+<tr><td>DCook</td>         <td></td><td align=right>65</td></tr>
 <tr><td>MGordon</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Ridley</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Diggs</td>         <td></td><td align=right>0</td></tr>
+<tr><td>Ridley</td>        <td></td><td align=right>80</td></tr>
+<tr><td>Diggs</td>         <td></td><td align=right>80</td></tr>
 <tr><td>LThomas</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Koo</td>           <td></td><td align=right>0</td></tr>
-<tr><td>Chase</td>         <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>0</td></tr>
+<tr><td>Koo</td>           <td></td><td align=right>40</td></tr>
+<tr><td>Chase</td>         <td></td><td align=right>150</td></tr>
+<tr><td></td>              <td></td><td align=right>695</td></tr>
 </table>
 </td>
 <td></td><td></td>
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Rich (2)</b></font></td></tr>
-<tr><td>Mahomes</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Mixon</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Singletary</td>    <td></td><td align=right>0</td></tr>
-<tr><td>Metcalf</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Godwin</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Gronkowski</td>    <td></td><td align=right>0</td></tr>
-<tr><td>Gould</td>         <td></td><td align=right>0</td></tr>
-<tr><td>RMoore</td>        <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>0</td></tr>
+<tr><td>Mahomes</td>       <td></td><td align=right>335</td></tr>
+<tr><td>Mixon</td>         <td></td><td align=right>30</td></tr>
+<tr><td>Singletary</td>    <td></td><td align=right>240</td></tr>
+<tr><td>Metcalf</td>       <td></td><td align=right>25</td></tr>
+<tr><td>Godwin</td>        <td></td><td align=right>105</td></tr>
+<tr><td>Gronkowski</td>    <td></td><td align=right>150</td></tr>
+<tr><td>Gould</td>         <td></td><td align=right>55</td></tr>
+<tr><td>RMoore</td>        <td></td><td align=right>180</td></tr>
+<tr><td></td>              <td></td><td align=right>1120</td></tr>
 </table>
 </td>
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Mike (5)</b></font></td></tr>
-<tr><td>JAllen</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Gibson</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Edmonds</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Jefferson</td>     <td></td><td align=right>0</td></tr>
-<tr><td>Woods</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Tonyan</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Bass</td>          <td></td><td align=right>0</td></tr>
-<tr><td>JWilliams</td>     <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>0</td></tr>
+<tr><td>JAllen</td>        <td></td><td align=right>75</td></tr>
+<tr><td>Gibson</td>        <td></td><td align=right>30</td></tr>
+<tr><td>Montgomery</td>    <td></td><td align=right>30</td></tr>
+<tr><td>Jefferson</td>     <td></td><td align=right>105</td></tr>
+<tr><td>Woods</td>         <td></td><td align=right>30</td></tr>
+<tr><td>Tonyan</td>        <td></td><td align=right>125</td></tr>
+<tr><td>Bass</td>          <td></td><td align=right>25</td></tr>
+<tr><td>JWilliams</td>     <td></td><td align=right>30</td></tr>
+<tr><td></td>              <td></td><td align=right>450</td></tr>
 </table>
 </td>
 </tr>
@@ -66,58 +66,58 @@
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Grant (4)</b></font></td></tr>
-<tr><td>Herbert</td>       <td></td><td align=right>0</td></tr>
+<tr><td>Herbert</td>       <td></td><td align=right>105</td></tr>
 <tr><td>Kamara</td>        <td></td><td align=right>0</td></tr>
 <tr><td>EdwardsHelaire</td><td></td><td align=right>0</td></tr>
-<tr><td>Lamb</td>          <td></td><td align=right>0</td></tr>
-<tr><td>Kupp</td>          <td></td><td align=right>0</td></tr>
+<tr><td>Lamb</td>          <td></td><td align=right>40</td></tr>
+<tr><td>Kupp</td>          <td></td><td align=right>230</td></tr>
 <tr><td>Gesicki</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Sanders</td>       <td></td><td align=right>0</td></tr>
-<tr><td>ZWilson</td>       <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>0</td></tr>
+<tr><td>ZWilson</td>       <td></td><td align=right>25</td></tr>
+<tr><td></td>              <td></td><td align=right>400</td></tr>
 </table>
 </td>
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Roger (7)</b></font></td></tr>
-<tr><td>Brady</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Henry</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Barkley</td>       <td></td><td align=right>0</td></tr>
+<tr><td>Brady</td>         <td></td><td align=right>240</td></tr>
+<tr><td>Henry</td>         <td></td><td align=right>465</td></tr>
+<tr><td>Barkley</td>       <td></td><td align=right>25</td></tr>
 <tr><td>ABrown</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Cooper</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Waller</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Butker</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Pitts</td>         <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>0</td></tr>
+<tr><td>Waller</td>        <td></td><td align=right>30</td></tr>
+<tr><td>Butker</td>        <td></td><td align=right>25</td></tr>
+<tr><td>Pitts</td>         <td></td><td align=right>35</td></tr>
+<tr><td></td>              <td></td><td align=right>820</td></tr>
 </table>
 </td>
 <td></td><td></td>
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>States (6)</b></font></td></tr>
-<tr><td>RWilson</td>       <td></td><td align=right>0</td></tr>
+<tr><td>RWilson</td>       <td></td><td align=right>260</td></tr>
 <tr><td>MDavis</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Carson</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Smith-Schuster</td><td></td><td align=right>0</td></tr>
+<tr><td>Carson</td>        <td></td><td align=right>100</td></tr>
+<tr><td>Smith-Schuster</td><td></td><td align=right>50</td></tr>
 <tr><td>Hill</td>          <td></td><td align=right>0</td></tr>
-<tr><td>Andrews</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Blankenship</td>   <td></td><td align=right>0</td></tr>
-<tr><td>Harris</td>        <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>0</td></tr>
+<tr><td>Andrews</td>       <td></td><td align=right>25</td></tr>
+<tr><td>Blankenship</td>   <td></td><td align=right>125</td></tr>
+<tr><td>Harris</td>        <td></td><td align=right>100</td></tr>
+<tr><td></td>              <td></td><td align=right>660</td></tr>
 </table>
 </td>
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Sam (9)</b></font></td></tr>
-<tr><td>Rodgers</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Chubb</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Ekeler</td>        <td></td><td align=right>0</td></tr>
-<tr><td>DAdams</td>        <td></td><td align=right>0</td></tr>
-<tr><td>DSamuel</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Hockenson</td>     <td></td><td align=right>0</td></tr>
-<tr><td>Gay</td>           <td></td><td align=right>0</td></tr>
+<tr><td>Rodgers</td>       <td></td><td align=right>210</td></tr>
+<tr><td>Chubb</td>         <td></td><td align=right>195</td></tr>
+<tr><td>Ekeler</td>        <td></td><td align=right>65</td></tr>
+<tr><td>DAdams</td>        <td></td><td align=right>60</td></tr>
+<tr><td>DSamuel</td>       <td></td><td align=right>45</td></tr>
+<tr><td>Hockenson</td>     <td></td><td align=right>105</td></tr>
+<tr><td>Gay</td>           <td></td><td align=right>75</td></tr>
 <tr><td>Lance</td>         <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>0</td></tr>
+<tr><td></td>              <td></td><td align=right>755</td></tr>
 </table>
 </td>
 </tr>
@@ -125,29 +125,29 @@
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Randy (8)</b></font></td></tr>
-<tr><td>Stafford</td>      <td></td><td align=right>0</td></tr>
-<tr><td>Elliott</td>       <td></td><td align=right>0</td></tr>
-<tr><td>MSanders</td>      <td></td><td align=right>0</td></tr>
+<tr><td>Stafford</td>      <td></td><td align=right>140</td></tr>
+<tr><td>Elliott</td>       <td></td><td align=right>85</td></tr>
+<tr><td>MSanders</td>      <td></td><td align=right>25</td></tr>
 <tr><td>ABrown</td>        <td></td><td align=right>0</td></tr>
-<tr><td>ARobinson</td>     <td></td><td align=right>0</td></tr>
+<tr><td>ARobinson</td>     <td></td><td align=right>75</td></tr>
 <tr><td>Kittle</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Tucker</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Lawrence</td>      <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>0</td></tr>
+<tr><td>Tucker</td>        <td></td><td align=right>60</td></tr>
+<tr><td>Lawrence</td>      <td></td><td align=right>75</td></tr>
+<tr><td></td>              <td></td><td align=right>460</td></tr>
 </table>
 </td>
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>John (10)</b></font></td></tr>
-<tr><td>Hurts</td>         <td></td><td align=right>0</td></tr>
-<tr><td>JTaylor</td>       <td></td><td align=right>0</td></tr>
-<tr><td>AJones</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Hopkins</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Allen</td>         <td></td><td align=right>0</td></tr>
+<tr><td>Hurts</td>         <td></td><td align=right>90</td></tr>
+<tr><td>JTaylor</td>       <td></td><td align=right>25</td></tr>
+<tr><td>AJones</td>        <td></td><td align=right>255</td></tr>
+<tr><td>Hopkins</td>       <td></td><td align=right>100</td></tr>
+<tr><td>Allen</td>         <td></td><td align=right>50</td></tr>
 <tr><td>Goedert</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Succop</td>        <td></td><td align=right>0</td></tr>
-<tr><td>McPherson</td>     <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>0</td></tr>
+<tr><td>Succop</td>        <td></td><td align=right>30</td></tr>
+<tr><td>McPherson</td>     <td></td><td align=right>70</td></tr>
+<tr><td></td>              <td></td><td align=right>620</td></tr>
 </table>
 <td></td><td></td>
 </td>
@@ -167,43 +167,43 @@
     <td bgcolor=#B3B3B3><font size=3.5 color='purple'><b>Low</b></font></td>
     <td bgcolor=#B3B3B3><font size=3.5 color='purple'><b>Weeks Won</b></font></td></tr>
 <tr><td><font size=2>Matthew(1)</font></td>
-    <td><font size=2>1</font></td>
+    <td><font size=2>2</font></td>
     <td><font size=2>0</font></td>
+    <td><font size=2>2490</font></td>
+    <td><font size=2>1590</font></td>
     <td><font size=2>1360</font></td>
-    <td><font size=2>895</font></td>
-    <td><font size=2>1360</font></td>
-    <td><font size=2>1360</font></td>
-    <td><font size=2>1</font></td>
+    <td><font size=2>1130</font></td>
+    <td><font size=2>2</font></td>
 <tr><td><font size=2>Sam(9)</font></td>
-    <td><font size=2>1</font></td>
+    <td><font size=2>2</font></td>
     <td><font size=2>0</font></td>
-    <td><font size=2>640</font></td>
-    <td><font size=2>360</font></td>
-    <td><font size=2>640</font></td>
+    <td><font size=2>1395</font></td>
+    <td><font size=2>1020</font></td>
+    <td><font size=2>755</font></td>
     <td><font size=2>640</font></td>
     <td><font size=2>0</font></td>
 <tr><td><font size=2>Roger(7)</font></td>
-    <td><font size=2>0</font></td>
     <td><font size=2>1</font></td>
+    <td><font size=2>1</font></td>
+    <td><font size=2>1715</font></td>
+    <td><font size=2>1760</font></td>
     <td><font size=2>895</font></td>
-    <td><font size=2>1360</font></td>
-    <td><font size=2>895</font></td>
-    <td><font size=2>895</font></td>
+    <td><font size=2>820</font></td>
     <td><font size=2>0</font></td>
 <tr><td><font size=2>Steven(3)</font></td>
     <td><font size=2>0</font></td>
-    <td><font size=2>1</font></td>
-    <td><font size=2>360</font></td>
-    <td><font size=2>640</font></td>
-    <td><font size=2>360</font></td>
+    <td><font size=2>2</font></td>
+    <td><font size=2>1055</font></td>
+    <td><font size=2>1770</font></td>
+    <td><font size=2>695</font></td>
     <td><font size=2>360</font></td>
     <td><font size=2>0</font></td>
 <tr><td><font size=2>Mike(5)</font></td>
     <td><font size=2>0</font></td>
-    <td><font size=2>1</font></td>
-    <td><font size=2>325</font></td>
+    <td><font size=2>2</font></td>
     <td><font size=2>775</font></td>
-    <td><font size=2>325</font></td>
+    <td><font size=2>1895</font></td>
+    <td><font size=2>450</font></td>
     <td><font size=2>325</font></td>
     <td><font size=2>0</font></td>
 <tr><td><font size=2></font></td>
@@ -215,43 +215,43 @@
     <td><font size=2></font></td>
     <td><font size=2></font></td></tr>
 <tr><td><font size=2>Rich(2)</font></td>
-    <td><font size=2>1</font></td>
+    <td><font size=2>2</font></td>
     <td><font size=2>0</font></td>
+    <td><font size=2>1960</font></td>
+    <td><font size=2>1245</font></td>
+    <td><font size=2>1120</font></td>
     <td><font size=2>840</font></td>
-    <td><font size=2>795</font></td>
-    <td><font size=2>840</font></td>
-    <td><font size=2>840</font></td>
+    <td><font size=2>0</font></td>
+<tr><td><font size=2>John(10)</font></td>
+    <td><font size=2>2</font></td>
+    <td><font size=2>0</font></td>
+    <td><font size=2>1365</font></td>
+    <td><font size=2>1155</font></td>
+    <td><font size=2>745</font></td>
+    <td><font size=2>620</font></td>
     <td><font size=2>0</font></td>
 <tr><td><font size=2>States(6)</font></td>
     <td><font size=2>1</font></td>
-    <td><font size=2>0</font></td>
-    <td><font size=2>775</font></td>
-    <td><font size=2>325</font></td>
-    <td><font size=2>775</font></td>
-    <td><font size=2>775</font></td>
-    <td><font size=2>0</font></td>
-<tr><td><font size=2>John(10)</font></td>
     <td><font size=2>1</font></td>
-    <td><font size=2>0</font></td>
-    <td><font size=2>745</font></td>
-    <td><font size=2>695</font></td>
-    <td><font size=2>745</font></td>
-    <td><font size=2>745</font></td>
+    <td><font size=2>1435</font></td>
+    <td><font size=2>1080</font></td>
+    <td><font size=2>775</font></td>
+    <td><font size=2>660</font></td>
     <td><font size=2>0</font></td>
 <tr><td><font size=2>Randy(8)</font></td>
     <td><font size=2>0</font></td>
-    <td><font size=2>1</font></td>
+    <td><font size=2>2</font></td>
+    <td><font size=2>1255</font></td>
+    <td><font size=2>1460</font></td>
     <td><font size=2>795</font></td>
-    <td><font size=2>840</font></td>
-    <td><font size=2>795</font></td>
-    <td><font size=2>795</font></td>
+    <td><font size=2>460</font></td>
     <td><font size=2>0</font></td>
 <tr><td><font size=2>Grant(4)</font></td>
     <td><font size=2>0</font></td>
-    <td><font size=2>1</font></td>
+    <td><font size=2>2</font></td>
+    <td><font size=2>1095</font></td>
+    <td><font size=2>1565</font></td>
     <td><font size=2>695</font></td>
-    <td><font size=2>745</font></td>
-    <td><font size=2>695</font></td>
-    <td><font size=2>695</font></td>
+    <td><font size=2>400</font></td>
     <td><font size=2>0</font></td>
 </table>
