--- a/roster.html
+++ b/roster.html
@@ -14,7 +14,7 @@
 <tr><td>DET</td><td>D'Andre Swift          </td></tr>
 <tr><td>DET</td><td>Jamaal Williams        </td></tr>
 <tr><td> LV</td><td>Kenyan Drake           </td></tr>
-<tr><td> NO</td><td>Latavius Murray        </td></tr>
+<tr><td>BAL</td><td>Latavius Murray        </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>MIN</td><td>Adam Thielen           </td></tr>
 <tr><td>SEA</td><td>Tyler Lockett          </td></tr>
