--- a/freeagt.html
+++ b/freeagt.html
@@ -1,49 +1,54 @@
 <table border=0 cellspacing=0 cellpadding=2 width=100><tr>
 <td bgcolor=#802080 valign=center height=3 nowrap rowspan=2 width=705>
-<b><font size=6 color='white'><center>2021 Free Agent Leaderboard<br>(Through week 1)</font></b>&nbsp;&nbsp;</td></tr>
+<b><font size=6 color='white'><center>2021 Free Agent Leaderboard<br>(Through week 2)</font></b>&nbsp;&nbsp;</td></tr>
 </table>
 <table cellspacing=1><tr><td valign=top>
 <table width=260 border=2 cellspacing=0 cellpadding=1>
 <tr bgcolor=#000A78><td colspan=3><font size=5 color='yellow'><center>Quarterbacks</td></tr>
-<tr><td><font size=3>1)</td><td><font size=3>Jared Goff             </td><td><font size=3> 230</td></tr>
-<tr><td><font size=3>2)</td><td><font size=3>Derek Carr             </td><td><font size=3> 205</td></tr>
-<tr><td><font size=3>3)</td><td><font size=3>Sam Darnold            </td><td><font size=3> 190</td></tr>
-<tr><td><font size=3>4)</td><td><font size=3>Daniel Jones           </td><td><font size=3> 165</td></tr>
-<tr><td><font size=3>5)</td><td><font size=3>Jimmy Garoppolo        </td><td><font size=3> 150</td></tr>
-<tr><td><font size=3>6)</td><td><font size=3>Tyrod Taylor           </td><td><font size=3> 145</td></tr>
-<tr><td><font size=3>7)</td><td><font size=3>Carson Wentz           </td><td><font size=3> 135</td></tr>
-<tr><td><font size=3>8)</td><td><font size=3>Teddy Bridgewater      </td><td><font size=3>  90</td></tr>
-<tr><td><font size=3>9)</td><td><font size=3>Baker Mayfield         </td><td><font size=3>  55</td></tr>
-<tr><td><font size=3>10)</td><td><font size=3>Taylor Heinicke        </td><td><font size=3>  50</td></tr>
-<tr><td><font size=3>11)</td><td><font size=3>Andy Dalton            </td><td><font size=3>  25</td></tr>
+<tr><td><font size=3>1)</td><td><font size=3>Daniel Jones           </td><td><font size=3> 420</td></tr>
+<tr><td><font size=3>2)</td><td><font size=3>Sam Darnold            </td><td><font size=3> 340</td></tr>
+<tr><td><font size=3>3)</td><td><font size=3>Jared Goff             </td><td><font size=3> 340</td></tr>
+<tr><td><font size=3>4)</td><td><font size=3>Tyrod Taylor           </td><td><font size=3> 320</td></tr>
+<tr><td><font size=3>5)</td><td><font size=3>Jimmy Garoppolo        </td><td><font size=3> 250</td></tr>
+<tr><td><font size=3>6)</td><td><font size=3>Teddy Bridgewater      </td><td><font size=3> 245</td></tr>
+<tr><td><font size=3>7)</td><td><font size=3>Carson Wentz           </td><td><font size=3> 225</td></tr>
+<tr><td><font size=3>8)</td><td><font size=3>Taylor Heinicke        </td><td><font size=3> 205</td></tr>
+<tr><td><font size=3>9)</td><td><font size=3>Baker Mayfield         </td><td><font size=3> 205</td></tr>
+<tr><td><font size=3>10)</td><td><font size=3>Andy Dalton            </td><td><font size=3>  75</td></tr>
+<tr><td><font size=3>11)</td><td><font size=3>Ryan Fitzpatrick       </td><td><font size=3>   0</td></tr>
 </table>
 </td><td valign=top>
 <table width=220 border=2 cellspacing=0 cellpadding=1>
 <tr bgcolor=#000A78><td colspan=2><font size=5 color='yellow'><center>Running Backs</td></tr>
-<tr><td><font size=3>Mark Ingram            </td><td><font size=3>  90</td></tr>
+<tr><td><font size=3>Cordarrelle Patterson  </td><td><font size=3> 225</td></tr>
+<tr><td><font size=3>James White            </td><td><font size=3> 100</td></tr>
+<tr><td><font size=3>JD McKissic            </td><td><font size=3>  90</td></tr>
 <tr><td><font size=3>JaMycal Hasty          </td><td><font size=3>  50</td></tr>
-<tr><td><font size=3>Cordarrelle Patterson  </td><td><font size=3>  25</td></tr>
+<tr><td><font size=3>Andy Janovich          </td><td><font size=3>  50</td></tr>
+<tr><td><font size=3>Darrel Wiliams         </td><td><font size=3>  50</td></tr>
+<tr><td><font size=3>Ty Johnson             </td><td><font size=3>  25</td></tr>
 <tr><td><font size=3>Gus Edwards            </td><td><font size=3>   0</td></tr>
 <tr><td><font size=3>Alexander Mattison     </td><td><font size=3>   0</td></tr>
+<tr><td><font size=3>Raheem Mostert         </td><td><font size=3>   0</td></tr>
 </table>
 </td><td valign=top>
 <table width=220 border=2 cellspacing=0 cellpadding=1>
 <tr bgcolor=#000A78><td colspan=2><font size=5 color='yellow'><center>Wide Receivers</td></tr>
-<tr><td><font size=3>Christian Kirk         </td><td><font size=3> 205</td></tr>
+<tr><td><font size=3>Marquise Brown         </td><td><font size=3> 285</td></tr>
+<tr><td><font size=3>Christian Kirk         </td><td><font size=3> 235</td></tr>
+<tr><td><font size=3>Zach Pascal            </td><td><font size=3> 225</td></tr>
+<tr><td><font size=3>Marvin Jones           </td><td><font size=3> 210</td></tr>
+<tr><td><font size=3>KJ Osborn              </td><td><font size=3> 205</td></tr>
+<tr><td><font size=3>Jamal Agnew            </td><td><font size=3> 200</td></tr>
+<tr><td><font size=3>Sterling Shepard       </td><td><font size=3> 200</td></tr>
+<tr><td><font size=3>Freddie Swain          </td><td><font size=3> 170</td></tr>
 <tr><td><font size=3>Van Jefferson          </td><td><font size=3> 165</td></tr>
 <tr><td><font size=3>Deonte Harris          </td><td><font size=3> 160</td></tr>
-<tr><td><font size=3>Sterling Shepard       </td><td><font size=3> 155</td></tr>
-<tr><td><font size=3>Zach Pascal            </td><td><font size=3> 150</td></tr>
+<tr><td><font size=3>Byron Pringle          </td><td><font size=3> 155</td></tr>
+<tr><td><font size=3>Darius Slayton         </td><td><font size=3> 155</td></tr>
+<tr><td><font size=3>Quintez Cephus         </td><td><font size=3> 130</td></tr>
+<tr><td><font size=3>Tim Patrick            </td><td><font size=3> 125</td></tr>
 <tr><td><font size=3>Nelson Agholor         </td><td><font size=3> 110</td></tr>
-<tr><td><font size=3>Marquise Brown         </td><td><font size=3> 105</td></tr>
-<tr><td><font size=3>Zay Jones              </td><td><font size=3> 100</td></tr>
-<tr><td><font size=3>Jalen Reagor           </td><td><font size=3> 100</td></tr>
-<tr><td><font size=3>Marvin Jones           </td><td><font size=3>  85</td></tr>
-<tr><td><font size=3>Danny Amendola         </td><td><font size=3>  75</td></tr>
-<tr><td><font size=3>Chris Hogan            </td><td><font size=3>  75</td></tr>
-<tr><td><font size=3>Quintez Cephus         </td><td><font size=3>  50</td></tr>
-<tr><td><font size=3>Tim Patrick            </td><td><font size=3>  50</td></tr>
-<tr><td><font size=3>Trent Sherfield        </td><td><font size=3>  50</td></tr>
 </table>
 </td></tr><tr><td valign=top>
 <table width=260 border=2 cellspacing=0 cellpadding=1>
@@ -51,33 +56,39 @@
 <tr><td><font size=3>1)</td><td><font size=3>Juwan Johnson          </td><td><font size=3> 125</td></tr>
 <tr><td><font size=3>2)</td><td><font size=3>Chris Manhertz         </td><td><font size=3> 100</td></tr>
 <tr><td><font size=3>3)</td><td><font size=3>Gerald Everett         </td><td><font size=3>  75</td></tr>
-<tr><td><font size=3>4)</td><td><font size=3>Albert Okwuegbunam     </td><td><font size=3>  50</td></tr>
-<tr><td><font size=3>5)</td><td><font size=3>David Njoku            </td><td><font size=3>  35</td></tr>
-<tr><td><font size=3>6)</td><td><font size=3>Pharaoh Brown          </td><td><font size=3>  30</td></tr>
+<tr><td><font size=3>4)</td><td><font size=3>Dawson Knox            </td><td><font size=3>  75</td></tr>
+<tr><td><font size=3>5)</td><td><font size=3>Foster Moreau          </td><td><font size=3>  75</td></tr>
+<tr><td><font size=3>6)</td><td><font size=3>Ricky Seals-Jones      </td><td><font size=3>  75</td></tr>
+<tr><td><font size=3>7)</td><td><font size=3>Albert Okwuegbunam     </td><td><font size=3>  50</td></tr>
+<tr><td><font size=3>8)</td><td><font size=3>Maxx Williams          </td><td><font size=3>  45</td></tr>
+<tr><td><font size=3>9)</td><td><font size=3>Jack Doyle             </td><td><font size=3>  35</td></tr>
+<tr><td><font size=3>10)</td><td><font size=3>David Njoku            </td><td><font size=3>  35</td></tr>
+<tr><td><font size=3>11)</td><td><font size=3>Pharaoh Brown          </td><td><font size=3>  30</td></tr>
+<tr><td><font size=3>12)</td><td><font size=3>Dan Arnold             </td><td><font size=3>  25</td></tr>
 </table>
 </td><td valign=top>
 <table width=220 border=2 cellspacing=0 cellpadding=1>
 <tr bgcolor=#000A78><td colspan=2><font size=5 color='yellow'><center>Kickers</td></tr>
-<tr><td><font size=3>Dustin Hopkins         </td><td><font size=3> 125</td></tr>
-<tr><td><font size=3>Daniel Carlson         </td><td><font size=3> 105</td></tr>
-<tr><td><font size=3>Joey Slye              </td><td><font size=3> 105</td></tr>
-<tr><td><font size=3>Nick Folk              </td><td><font size=3> 100</td></tr>
-<tr><td><font size=3>Chris Boswell          </td><td><font size=3>  95</td></tr>
-<tr><td><font size=3>Greg Joseph            </td><td><font size=3>  75</td></tr>
-<tr><td><font size=3>Aldrick Rosas          </td><td><font size=3>  70</td></tr>
-<tr><td><font size=3>Jake Elliott           </td><td><font size=3>  60</td></tr>
-<tr><td><font size=3>Tristan Vizcaino       </td><td><font size=3>  60</td></tr>
-<tr><td><font size=3>Austin Seibert         </td><td><font size=3>  55</td></tr>
-<tr><td><font size=3>Ryan Santoso           </td><td><font size=3>  45</td></tr>
-<tr><td><font size=3>Mason Crosby           </td><td><font size=3>  30</td></tr>
-<tr><td><font size=3>Josh Lambo             </td><td><font size=3>  15</td></tr>
-<tr><td><font size=3>Chase McLaughlin       </td><td><font size=3>  15</td></tr>
-<tr><td><font size=3>Cairo Santos           </td><td><font size=3>  10</td></tr>
+<tr><td><font size=3>Daniel Carlson         </td><td><font size=3> 280</td></tr>
+<tr><td><font size=3>Dustin Hopkins         </td><td><font size=3> 260</td></tr>
+<tr><td><font size=3>Nick Folk              </td><td><font size=3> 245</td></tr>
+<tr><td><font size=3>Graham Gano            </td><td><font size=3> 230</td></tr>
+<tr><td><font size=3>Greg Joseph            </td><td><font size=3> 210</td></tr>
+<tr><td><font size=3>Chris Boswell          </td><td><font size=3> 165</td></tr>
+<tr><td><font size=3>Tristan Vizcaino       </td><td><font size=3> 155</td></tr>
+<tr><td><font size=3>Randy Bullock          </td><td><font size=3> 125</td></tr>
+<tr><td><font size=3>Joey Slye              </td><td><font size=3> 120</td></tr>
+<tr><td><font size=3>Austin Seibert         </td><td><font size=3> 110</td></tr>
+<tr><td><font size=3>Jake Elliott           </td><td><font size=3> 105</td></tr>
+<tr><td><font size=3>Zane Gonzalez          </td><td><font size=3>  75</td></tr>
+<tr><td><font size=3>Aldrick Rosas          </td><td><font size=3>  75</td></tr>
+<tr><td><font size=3>Chase McLaughlin       </td><td><font size=3>  65</td></tr>
+<tr><td><font size=3>Cairo Santos           </td><td><font size=3>  60</td></tr>
 </table>
 </td><td valign=top>
 <table width=220 border=2 cellspacing=0 cellpadding=1>
 <tr bgcolor=#000A78><td colspan=2><font size=5 color='yellow'><center>Rookies</td></tr>
-<tr><td><font size=3>Eli Mitchell           </td><td><font size=3> 200</td></tr>
+<tr><td><font size=3>Demetric Felton        </td><td><font size=3> 125</td></tr>
 <tr><td><font size=3>Anthony Schwartz       </td><td><font size=3>  30</td></tr>
 <tr><td><font size=3>Jake Verity            </td><td><font size=3>   0</td></tr>
 </table>
