--- a/pickups.html
+++ b/pickups.html
@@ -262,8 +262,8 @@
 <tr>
 <td><table><tr>
 <td width=15>1)</td>
-<td width=370></td>
-<td width=50></td>
+<td width=370>Marquise Brown/Phillip Lindsay</td>
+<td width=50>9/21</td>
 </tr></table></td>
 <td><table><tr>
 <td width=15>1)</td>
