--- a/roster.html
+++ b/roster.html
@@ -242,12 +242,12 @@
 <tr><td>CLE</td><td>Kareem Hunt            </td></tr>
 <tr><td> TB</td><td>Ronald Jones           </td></tr>
 <tr><td>BAL</td><td>Ty'Son Williams        </td></tr>
-<tr><td>HOU</td><td>Phillip Lindsay        </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td> GB</td><td>Davante Adams          </td></tr>
 <tr><td>TEN</td><td>Julio Jones            </td></tr>
 <tr><td> SF</td><td>Brandon Aiyuk          </td></tr>
 <tr><td> SF</td><td>Deebo Samuel           </td></tr>
+<tr><td>BAL</td><td>Marquise Brown         </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>DET</td><td>TJ Hockenson           </td></tr>
 <tr><td>LAR</td><td>Tyler Higbee           </td></tr>
