--- a/pickups.html
+++ b/pickups.html
@@ -210,8 +210,8 @@
 <tr>
 <td><table><tr>
 <td width=15>2)</td>
-<td width=370></td>
-<td width=50></td>
+<td width=370>Cordarelle Patterson/Will Fuller</td>
+<td width=50>9/23</td>
 </tr></table></td>
 <td><table><tr>
 <td width=15>2)</td>
@@ -331,7 +331,8 @@ Team 2  - Matt Breida/Gus Edwards (9/9)<br>
 Team 4  - Eli Mitchell/Raheem Mostert (9/15)<br>
 Team 9  - Larry Rountree/Jerry Jeudy (9/15)<br>
 Team 5  - Derek Carr/Ryan Fitzpatrick (9/16)<br>
-Team 5  - Mark Ingram/Wil Lutz (9/16)
+Team 5  - Mark Ingram/Wil Lutz (9/16)<br>
+Team 8  - Alexander Mattison/Nico Collins (9/24)
 </td></tr>
 <!--
 <tr><td width=50>9/25</td>
