--- a/roster.html
+++ b/roster.html
@@ -184,12 +184,12 @@
 <tr><td>TEN</td><td>Derrick Henry          </td></tr>
 <tr><td>NYG</td><td>Saquon Barkley         </td></tr>
 <tr><td>BAL</td><td>Le'Veon Bell           </td></tr>
+<tr><td>ATL</td><td>Cordarrelle Patterson  </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>PIT</td><td>Chase Claypool         </td></tr>
 <tr><td>DAL</td><td>Amari Cooper           </td></tr>
 <tr><td>CLE</td><td>Odell Beckham          </td></tr>
 <tr><td> KC</td><td>Mecole Hardman         </td></tr>
-<tr><td>MIA</td><td>Will Fuller            </td></tr>
 <tr><td>LAC</td><td>Mike Williams          </td></tr>
 <tr><td> TB</td><td>Antonio Brown          </td></tr>
 <tr><td>BUF</td><td>Gabriel Davis          </td></tr>
@@ -216,6 +216,7 @@
 <tr><td>LAR</td><td>Darrell Henderson      </td></tr>
 <tr><td> NE</td><td>Damien Harris          </td></tr>
 <tr><td>DAL</td><td>Tony Pollard           </td></tr>
+<tr><td>MIN</td><td>Alexander Mattison     </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>TEN</td><td>AJ Brown               </td></tr>
 <tr><td>CHI</td><td>Allen Robinson         </td></tr>
@@ -229,7 +230,6 @@
 <tr><td height=9></td><td></td></tr>
 <tr><td>JAX</td><td>Trevor Lawrence        </td></tr>
 <tr><td>NYJ</td><td>Matt Ammendola         </td></tr>
-<tr><td>HOU</td><td>Nico Collins           </td></tr>
 </table>
 </td>
 <td valign=top>
