--- a/pickups.html
+++ b/pickups.html
@@ -332,7 +332,8 @@ Team 4  - Eli Mitchell/Raheem Mostert (9/15)<br>
 Team 9  - Larry Rountree/Jerry Jeudy (9/15)<br>
 Team 5  - Derek Carr/Ryan Fitzpatrick (9/16)<br>
 Team 5  - Mark Ingram/Wil Lutz (9/16)<br>
-Team 8  - Alexander Mattison/Nico Collins (9/24)
+Team 8  - Alexander Mattison/Nico Collins (9/24)<br>
+Team 4  - Daniel Jones/Tua Tagovailoa (9/26)
 </td></tr>
 <!--
 <tr><td width=50>9/25</td>
