--- a/roster.html
+++ b/roster.html
@@ -94,8 +94,8 @@
 <table border=0 cellspacing=0 width=204>
 <tr><td bgcolor=#B3B3B3 colspan=2><font color='purple'><b>Grant (4)</b></font></td></tr>
 <tr><td>LAC</td><td>Justin Herbert         </td></tr>
-<tr><td>MIA</td><td>Tua Tagovailoa         </td></tr>
 <tr><td>HOU</td><td>Deshaun Watson         </td></tr>
+<tr><td>NYG</td><td>Daniel Jones           </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td> NO</td><td>Alvin Kamara           </td></tr>
 <tr><td> KC</td><td>Clyde Edwards-Helaire  </td></tr>
