--- a/week3.html
+++ b/week3.html
@@ -84,7 +84,7 @@
 <tr><td>Gibson</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Montgomery</td>    <td></td><td align=right>0</td></tr>
 <tr><td>Jefferson</td>     <td></td><td align=right>0</td></tr>
-<tr><td>Woods</td>         <td></td><td align=right>0</td></tr>
+<tr><td>Chark</td>         <td></td><td align=right>0</td></tr>
 <tr><td>Tonyan</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Bass</td>          <td></td><td align=right>0</td></tr>
 <tr><td>JWilliams</td>     <td></td><td align=right>0</td></tr>
@@ -96,9 +96,9 @@
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>States (6)</b></font></td></tr>
 <tr><td>RWilson</td>       <td></td><td align=right>0</td></tr>
-<tr><td>MDavis</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Carson</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Smith-Schuster</td><td></td><td align=right>0</td></tr>
+<tr><td>Michel</td>        <td></td><td align=right>0</td></tr>
+<tr><td>Ruggs</td>         <td></td><td align=right>0</td></tr>
 <tr><td>Hill</td>          <td></td><td align=right>0</td></tr>
 <tr><td>Andrews</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Blankenship</td>   <td></td><td align=right>0</td></tr>
