--- a/pickups.html
+++ b/pickups.html
@@ -335,11 +335,9 @@ Team 5  - Mark Ingram/Wil Lutz (9/16)<br>
 Team 8  - Alexander Mattison/Nico Collins (9/24)<br>
 Team 4  - Daniel Jones/Tua Tagovailoa (9/26)
 </td></tr>
-<!--
-<tr><td width=50>9/25</td>
+<tr><td width=50>9/29</td>
 <td width=600>
-Team 4 - David Montgomery<br>
-Team 5 - D'Andre Swift
+Team 8 - Marquise Brown, Kadarius Toney<br>
+Team 9 - Matt Ammendola, Jameis Winston
 </td></tr>
--->
 </table>
