--- a/pickups.html
+++ b/pickups.html
@@ -340,4 +340,9 @@ Team 4  - Daniel Jones/Tua Tagovailoa (9/26)
 Team 8 - Marquise Brown, Kadarius Toney<br>
 Team 9 - Matt Ammendola, Jameis Winston
 </td></tr>
+<tr><td width=50>9/30</td>
+<td width=600>
+Team 3 - Alexander Mattison<br>
+Team 8 - DeVonta Smith
+</td></tr>
 </table>
